# fx-try-risk-lab

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  FX_EXPERTS_SPEC.md  FX_IMPLEMENTATION_BLUEPRINT.md  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml  render.yaml  start-browser.ps1  start.ps1
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  refresh-browser-data.yml
app/: __init__.py  bootstrap.py  middleware.py  serve.py
app/models/: __init__.py
app/services/: __init__.py  realized_outcomes.py  report_store.py  source_refresh.py
app/templates/: backtesting.html  base.html  macro_series.html  new_assessment.html  sources.html
docs/: app.js  index.html  methodology.html  style.css
docs/data/: expert-latest.json  forecast_ledger.json  history.json  latest.json  source_cache.json
fx-experts-skill/agents/: openai.yaml
fx-experts-skill/references/: build-guidelines.md  (+1 more)
legacy/: README.md
risklab/: __init__.py  forecast.py  ledger.py  quality.py
scripts/: build_browser_data.py  validate_browser_bundle.py
tests/: __init__.py  test_build_semantics.py  test_content_financial_quality.py  test_expert_overlay.py  test_frontend_compatibility.py  test_ledger_integrity.py  test_path_ledger.py  test_quantitative_core.py  test_security_boundaries.py  test_touch_contract.py  test_validate_browser_bundle.py  test_web.py
(+24 files in other folders)
