[project]
name = "fx-try-risk"
version = "0.1.0"
description = "Local-first research engine for assessing Turkish lira depreciation risk."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1.0",
    "itsdangerous>=2.2,<3.0",
    "jinja2>=3.1,<4.0",
    "pydantic-settings>=2.10,<3.0",
    "python-multipart>=0.0.20,<0.1.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.scripts]
fx-try-risk = "app.serve:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.4,<9.0",
    "ruff>=0.11,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["."]
testpaths = ["tests"]
